--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="pl">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <a href="./index.html">WebStudio</a>
+      <nav>
+        <a href="./agencja.html">Agencja</a>
+        <a href="./portfolio.html">Portfolio</a>
+        <a href="./kontakt.html">Kontakt</a>
+      </nav>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="tel:+48111111111">+48 111 111 111</a>
+    </header>
+    <main>
+      <h1>Efektywne rozwiązania dla waszego biznesu</h1>
+      <button type="button">Zamów usługe</button>
+    </main>
+  </body>
 </html>
