--- a/index.html
+++ b/index.html
@@ -20,6 +20,43 @@
     <main>
       <h1>Efektywne rozwiązania dla waszego biznesu</h1>
       <button type="button">Zamów usługe</button>
+      <article>
+        <h5>Lorem ipsum</h5>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
+          sem. Sed non sodales dui. Interdum et malesuada
+        </p>
+      </article>
+      <article>
+        <h5>Lorem ipsum</h5>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
+          sem. Sed non sodales dui. Interdum et malesuada
+        </p>
+      </article>
+      <article>
+        <h5>Lorem ipsum</h5>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
+          sem. Sed non sodales dui. Interdum et malesuada
+        </p>
+      </article>
+      <article>
+        <h5>Lorem ipsum</h5>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
+          sem. Sed non sodales dui. Interdum et malesuada
+        </p>
+      </article>
+      <h2>Czym się zajmujemy</h2>
+
+      <h2>Nasz zespół</h2>
     </main>
+    <footer>
+      <a href="./index.html">WebStudio</a>
+      <address>m. Warszawa, Aleje Jerozolimskie 21</address>
+      <a href="mailto:info@example.com">info@example.com</a>
+      <a href="tel:+48111111111">+48 111 111 111</a>
+    </footer>
   </body>
 </html>
