--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
     </main>
     <footer>
       <a href="./index.html">WebStudio</a>
-      <address>m. Warszawa, Aleje Jerozolimskie 21</address>
-      <a href="mailto:info@example.com">info@example.com</a>
-      <a href="tel:+48111111111">+48 111 111 111</a>
+      <address>
+        m. Warszawa, Aleje Jerozolimskie 21 <br />
+        <a href="mailto:info@example.com">info@example.com</a> <br />
+        <a href="tel:+48111111111">+48 111 111 111</a>
+      </address>
     </footer>
   </body>
 </html>
