--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <header>
       <a href="./index.html">WebStudio</a>
       <nav>
-        <a href="./agencja.html">Agencja</a>
-        <a href="./portfolio.html">Portfolio</a>
-        <a href="./kontakt.html">Kontakt</a>
+        <ul>
+          <li><a href="./agency.html">Agencja</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
+          <li><a href="./contacts.html">Kontakt</a></li>
+        </ul>
       </nav>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a href="tel:+48111111111">+48 111 111 111</a>
@@ -20,37 +22,116 @@
     <main>
       <h1>Efektywne rozwiązania dla waszego biznesu</h1>
       <button type="button">Zamów usługe</button>
-      <article>
-        <h5>Lorem ipsum</h5>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
-          sem. Sed non sodales dui. Interdum et malesuada
-        </p>
-      </article>
-      <article>
-        <h5>Lorem ipsum</h5>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
-          sem. Sed non sodales dui. Interdum et malesuada
-        </p>
-      </article>
-      <article>
-        <h5>Lorem ipsum</h5>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
-          sem. Sed non sodales dui. Interdum et malesuada
-        </p>
-      </article>
-      <article>
-        <h5>Lorem ipsum</h5>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
-          sem. Sed non sodales dui. Interdum et malesuada
-        </p>
-      </article>
-      <h2>Czym się zajmujemy</h2>
-
-      <h2>Nasz zespół</h2>
+      <ul>
+        <li>
+          <article>
+            <h3>Lorem ipsum</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </article>
+        </li>
+        <li>
+          <article>
+            <h3>Lorem ipsum</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </article>
+        </li>
+        <li>
+          <article>
+            <h3>Lorem ipsum</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </article>
+        </li>
+        <li>
+          <article>
+            <h3>Lorem ipsum</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </article>
+        </li>
+      </ul>
+      <section>
+        <h2>Czym się zajmujemy</h2>
+        <img
+          src="/images/img1.jpg"
+          alt="hands typing code on a keyboard"
+          width="370"
+          height="294"
+        />
+        <img
+          src="/images/img2.jpg"
+          alt="woman with a phone in her hand looking at phone interfaces"
+          width="370"
+          height="294"
+        />
+        <img
+          src="/images/img3.jpg"
+          alt="person using a graphics tablet"
+          width="370"
+          height="294"
+        />
+      </section>
+      <section>
+        <h2>Nasz zespół</h2>
+        <figure>
+          <img
+            src="/images/worker1.jpg"
+            alt="picture of John Doe"
+            width="270"
+            height="260"
+          />
+          <figcaption>
+            <b>John Doe</b>
+            <div>Product Designer</div>
+          </figcaption>
+        </figure>
+        <figure>
+          <img
+            src="/images/worker2.jpg"
+            alt="picture of John Doe"
+            width="270"
+            height="260"
+          />
+          <figcaption>
+            <b>John Doe</b>
+            <div>Frontend Developer</div>
+          </figcaption>
+        </figure>
+        <figure>
+          <img
+            src="/images/worker3.jpg"
+            alt="picture of John Doe"
+            width="270"
+            height="260"
+          />
+          <figcaption>
+            <b>John Doe</b>
+            <div>Marketing</div>
+          </figcaption>
+        </figure>
+        <figure>
+          <img
+            src="/images/worker4.jpg"
+            alt="picture of John Doe"
+            width="270"
+            height="260"
+          />
+          <figcaption>
+            <b>John Doe</b>
+            <div>UI Designer</div>
+          </figcaption>
+        </figure>
+      </section>
     </main>
     <footer>
       <a href="./index.html">WebStudio</a>
