--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">WebStudio</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="./agency.html">Agencja</a></li>
           <li><a href="./portfolio.html">Portfolio</a></li>
@@ -20,62 +20,66 @@
       <a href="tel:+48111111111">+48 111 111 111</a>
     </header>
     <main>
-      <h1>Efektywne rozwiązania dla waszego biznesu</h1>
-      <button type="button">Zamów usługe</button>
-      <ul>
-        <li>
-          <article>
-            <h3>Lorem ipsum</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </article>
-        </li>
-        <li>
-          <article>
-            <h3>Lorem ipsum</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </article>
-        </li>
-        <li>
-          <article>
-            <h3>Lorem ipsum</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </article>
-        </li>
-        <li>
-          <article>
-            <h3>Lorem ipsum</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </article>
-        </li>
-      </ul>
+      <section>
+        <h1>Efektywne rozwiązania dla waszego biznesu</h1>
+        <button type="button">Zamów usługe</button>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <article>
+              <h3>Lorem ipsum</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3>Lorem ipsum</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3>Lorem ipsum</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3>Lorem ipsum</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </article>
+          </li>
+        </ul>
+      </section>
       <section>
         <h2>Czym się zajmujemy</h2>
         <img
-          src="/images/img1.jpg"
+          src="./images/img1.jpg"
           alt="hands typing code on a keyboard"
           width="370"
           height="294"
         />
         <img
-          src="/images/img2.jpg"
+          src="./images/img2.jpg"
           alt="woman with a phone in her hand looking at phone interfaces"
           width="370"
           height="294"
         />
         <img
-          src="/images/img3.jpg"
+          src="./images/img3.jpg"
           alt="person using a graphics tablet"
           width="370"
           height="294"
@@ -85,50 +89,50 @@
         <h2>Nasz zespół</h2>
         <figure>
           <img
-            src="/images/worker1.jpg"
+            src="./images/worker1.jpg"
             alt="picture of John Doe"
             width="270"
             height="260"
           />
           <figcaption>
-            <b>John Doe</b>
-            <div>Product Designer</div>
+            <span>John Doe</span>
+            <span>Product Designer</span>
           </figcaption>
         </figure>
         <figure>
           <img
-            src="/images/worker2.jpg"
+            src="./images/worker2.jpg"
             alt="picture of John Doe"
             width="270"
             height="260"
           />
           <figcaption>
-            <b>John Doe</b>
-            <div>Frontend Developer</div>
+            <span>John Doe</span>
+            <span>Frontend Developer</span>
           </figcaption>
         </figure>
         <figure>
           <img
-            src="/images/worker3.jpg"
+            src="./images/worker3.jpg"
             alt="picture of John Doe"
             width="270"
             height="260"
           />
           <figcaption>
-            <b>John Doe</b>
-            <div>Marketing</div>
+            <span>John Doe</span>
+            <span>Marketing</span>
           </figcaption>
         </figure>
         <figure>
           <img
-            src="/images/worker4.jpg"
+            src="./images/worker4.jpg"
             alt="picture of John Doe"
             width="270"
             height="260"
           />
           <figcaption>
-            <b>John Doe</b>
-            <div>UI Designer</div>
+            <span>John Doe</span>
+            <span>UI Designer</span>
           </figcaption>
         </figure>
       </section>
@@ -136,8 +140,8 @@
     <footer>
       <a href="./index.html">WebStudio</a>
       <address>
-        m. Warszawa, Aleje Jerozolimskie 21 <br />
-        <a href="mailto:info@example.com">info@example.com</a> <br />
+        m. Warszawa, Aleje Jerozolimskie 21
+        <a href="mailto:info@example.com">info@example.com</a>
         <a href="tel:+48111111111">+48 111 111 111</a>
       </address>
     </footer>
