--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="./agency.html">Agencja</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="./contacts.html">Kontakt</a></li>
+          <li><a href="#">Agencja</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Kontakt</a></li>
         </ul>
       </nav>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
