--- a/index.html
+++ b/index.html
@@ -4,32 +4,48 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link href="./css/styles.css" rel="stylesheet" />
+    <style>
+      body {
+        font-family: "Roboto", sans-serif;
+        background-color: #ffffff;
+      }
+    </style>
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="logo" href="./index.html"
+          ><span class="logo-blue">Web</span
+          ><span class="logo-black">Studio</span></a
+        >
         <ul>
-          <li><a href="#">Agencja</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Kontakt</a></li>
+          <li><a class="nav-link" href="#">Agencja</a></li>
+          <li><a class="nav-link" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="nav-link" href="#">Kontakt</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+48111111111">+48 111 111 111</a>
+      <a class="header-contact" href="mailto:info@devstudio.com"
+        >info@devstudio.com</a
+      >
+      <a class="header-contact" href="tel:+48111111111">+48 111 111 111</a>
     </header>
     <main>
-      <section>
-        <h1>Efektywne rozwiązania dla waszego biznesu</h1>
-        <button type="button">Zamów usługe</button>
+      <section class="main-order">
+        <h1 class="title">Efektywne rozwiązania dla waszego biznesu</h1>
+        <button class="order-button" type="button">Zamów usługe</button>
       </section>
       <section>
         <ul>
           <li>
             <article>
               <h3>Lorem ipsum</h3>
-              <p>
+              <p class="main-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
@@ -38,7 +54,7 @@
           <li>
             <article>
               <h3>Lorem ipsum</h3>
-              <p>
+              <p class="main-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
@@ -47,7 +63,7 @@
           <li>
             <article>
               <h3>Lorem ipsum</h3>
-              <p>
+              <p class="main-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
@@ -56,7 +72,7 @@
           <li>
             <article>
               <h3>Lorem ipsum</h3>
-              <p>
+              <p class="main-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
@@ -97,8 +113,8 @@
                 height="260"
               />
               <figcaption>
-                <span>John Doe</span>
-                <span>Product Designer</span>
+                <span class="worker-name">John Doe</span>
+                <span class="worker-job">Product Designer</span>
               </figcaption>
             </figure>
           </li>
@@ -111,8 +127,8 @@
                 height="260"
               />
               <figcaption>
-                <span>John Doe</span>
-                <span>Frontend Developer</span>
+                <span class="worker-name">John Doe</span>
+                <span class="worker-job">Frontend Developer</span>
               </figcaption>
             </figure>
           </li>
@@ -125,8 +141,8 @@
                 height="260"
               />
               <figcaption>
-                <span>John Doe</span>
-                <span>Marketing</span>
+                <span class="worker-name">John Doe</span>
+                <span class="worker-job">Marketing</span>
               </figcaption>
             </figure>
           </li>
@@ -139,8 +155,8 @@
                 height="260"
               />
               <figcaption>
-                <span>John Doe</span>
-                <span>UI Designer</span>
+                <span class="worker-name">John Doe</span>
+                <span class="worker-job">UI Designer</span>
               </figcaption>
             </figure>
           </li>
@@ -148,11 +164,16 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html"
+        ><span class="logo-blue">Web</span
+        ><span class="logo-white">Studio</span></a
+      >
       <address>
         m. Warszawa, Aleje Jerozolimskie 21
-        <a href="mailto:info@example.com">info@example.com</a>
-        <a href="tel:+48111111111">+48 111 111 111</a>
+        <a class="contact-footer" href="mailto:info@example.com"
+          >info@example.com</a
+        >
+        <a class="contact-footer" href="tel:+48111111111">+48 111 111 111</a>
       </address>
     </footer>
   </body>
