--- a/portfolio.html
+++ b/portfolio.html
@@ -37,11 +37,17 @@
     <main>
       <section class="filter">
         <ul>
-          <li><button type="button">Wszystkie</button></li>
-          <li><button type="button">Strony</button></li>
-          <li><button type="button">Aplikacje</button></li>
-          <li><button type="button">Dizajn</button></li>
-          <li><button type="button">Marketing</button></li>
+          <li>
+            <button class="filter-button" type="button">Wszystkie</button>
+          </li>
+          <li><button class="filter-button" type="button">Strony</button></li>
+          <li>
+            <button class="filter-button" type="button">Aplikacje</button>
+          </li>
+          <li><button class="filter-button" type="button">Dizajn</button></li>
+          <li>
+            <button class="filter-button" type="button">Marketing</button>
+          </li>
         </ul>
       </section>
       <section>
@@ -55,8 +61,8 @@
                 height="294"
               />
               <figcaption>
-                <span>Technocrack</span>
-                <span>Strona internetowa</span>
+                <span class="list-item">Technocrack</span>
+                <span class="list-item-type">Strona internetowa</span>
               </figcaption>
             </figure>
           </li>
@@ -69,8 +75,8 @@
                 height="294"
               />
               <figcaption>
-                <span>Grafika New Orlean vs Golden Star</span>
-                <span>Dizajn</span>
+                <span class="list-item">Grafika New Orlean vs Golden Star</span>
+                <span class="list-item-type">Dizajn</span>
               </figcaption>
             </figure>
           </li>
@@ -83,8 +89,8 @@
                 height="294"
               />
               <figcaption>
-                <span>Restauracja Seafood</span>
-                <span>Aplikacja</span>
+                <span class="list-item">Restauracja Seafood</span>
+                <span class="list-item-type">Aplikacja</span>
               </figcaption>
             </figure>
           </li>
@@ -97,8 +103,8 @@
                 height="294"
               />
               <figcaption>
-                <span>Projekt Prime</span>
-                <span>Marketing</span>
+                <span class="list-item">Projekt Prime</span>
+                <span class="list-item-type">Marketing</span>
               </figcaption>
             </figure>
           </li>
@@ -111,8 +117,8 @@
                 height="294"
               />
               <figcaption>
-                <span>Projekt Boxes</span>
-                <span>Aplikacja</span>
+                <span class="list-item">Projekt Boxes</span>
+                <span class="list-item-type">Aplikacja</span>
               </figcaption>
             </figure>
           </li>
@@ -125,8 +131,8 @@
                 height="294"
               />
               <figcaption>
-                <span>Inspiration has no Borders</span>
-                <span>Strona internetowa</span>
+                <span class="list-item">Inspiration has no Borders</span>
+                <span class="list-item-type">Strona internetowa</span>
               </figcaption>
             </figure>
           </li>
@@ -139,8 +145,8 @@
                 height="294"
               />
               <figcaption>
-                <span>Magazyn Limited Edition</span>
-                <span>Dizajn</span>
+                <span class="list-item">Magazyn Limited Edition</span>
+                <span class="list-item-type">Dizajn</span>
               </figcaption>
             </figure>
           </li>
@@ -153,8 +159,8 @@
                 height="294"
               />
               <figcaption>
-                <span>Projekt LAB</span>
-                <span>Marketing</span>
+                <span class="list-item">Projekt LAB</span>
+                <span class="list-item-type">Marketing</span>
               </figcaption>
             </figure>
           </li>
@@ -167,8 +173,8 @@
                 height="294"
               />
               <figcaption>
-                <span>Growing Business</span>
-                <span>Aplikacja</span>
+                <span class="list-item">Growing Business</span>
+                <span class="list-item-type">Aplikacja</span>
               </figcaption>
             </figure>
           </li>
