changing font settings

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
         </ul>
       </section>
       <section>
-        <ul>
+        <ul class="list">
           <li>
             <figure>
               <img
