changed body global color

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <style>
       body {
         font-family: "Roboto", sans-serif;
-        background-color: #ffffff;
+        color: var(--darker-text-color);
       }
     </style>
   </head>
