--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,7 @@
     <style>
       body {
         font-family: "Roboto", sans-serif;
+        color: var(--darker-text-color);
       }
     </style>
   </head>
