--- a/index.html
+++ b/index.html
@@ -10,24 +10,17 @@
       rel="stylesheet"
     />
     <link href="./css/styles.css" rel="stylesheet" />
-    <style>
-      body {
-        font-family: "Roboto", sans-serif;
-        color: var(--darker-text-color);
-      }
-    </style>
   </head>
   <body>
     <header>
       <nav>
         <a class="logo" href="./index.html"
-          ><span class="logo-blue">Web</span
-          ><span class="logo-black">Studio</span></a
+          >Web<span class="logo-black">Studio</span></a
         >
-        <ul>
-          <li><a class="nav-link" href="#">Agencja</a></li>
-          <li><a class="nav-link" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="nav-link" href="#">Kontakt</a></li>
+        <ul class="nav-list">
+          <li><a href="#">Agencja</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
+          <li><a href="#">Kontakt</a></li>
         </ul>
       </nav>
       <a class="header-contact" href="mailto:info@devstudio.com"
@@ -36,15 +29,15 @@
       <a class="header-contact" href="tel:+48111111111">+48 111 111 111</a>
     </header>
     <main>
-      <section class="main-order">
+      <div class="main-order">
         <h1 class="title">Efektywne rozwiązania dla waszego biznesu</h1>
         <button class="order-button" type="button">Zamów usługe</button>
-      </section>
-      <section>
+      </div>
+      <div>
         <ul>
           <li>
             <article>
-              <h3>Lorem ipsum</h3>
+              <h3 class="article-title">Lorem ipsum</h3>
               <p class="main-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
@@ -53,7 +46,7 @@
           </li>
           <li>
             <article>
-              <h3>Lorem ipsum</h3>
+              <h3 class="article-title">Lorem ipsum</h3>
               <p class="main-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
@@ -62,7 +55,7 @@
           </li>
           <li>
             <article>
-              <h3>Lorem ipsum</h3>
+              <h3 class="article-title">Lorem ipsum</h3>
               <p class="main-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
@@ -71,7 +64,7 @@
           </li>
           <li>
             <article>
-              <h3>Lorem ipsum</h3>
+              <h3 class="article-title">Lorem ipsum</h3>
               <p class="main-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
@@ -79,9 +72,9 @@
             </article>
           </li>
         </ul>
-      </section>
-      <section>
-        <h2>Czym się zajmujemy</h2>
+      </div>
+      <div>
+        <h2 class="section-title">Czym się zajmujemy</h2>
         <img
           src="./images/img1.jpg"
           alt="hands typing code on a keyboard"
@@ -100,9 +93,9 @@
           width="370"
           height="294"
         />
-      </section>
-      <section>
-        <h2>Nasz zespół</h2>
+      </div>
+      <div>
+        <h2 class="section-title">Nasz zespół</h2>
         <ul>
           <li>
             <figure>
@@ -161,20 +154,23 @@
             </figure>
           </li>
         </ul>
-      </section>
+      </div>
     </main>
     <footer>
-      <a href="./index.html"
-        ><span class="logo-blue">Web</span
-        ><span class="logo-white">Studio</span></a
-      >
-      <address>
-        m. Warszawa, Aleje Jerozolimskie 21
-        <a class="contact-footer" href="mailto:info@example.com"
-          >info@example.com</a
+      <div class="container-footer">
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-white">Studio</span></a
         >
-        <a class="contact-footer" href="tel:+48111111111">+48 111 111 111</a>
-      </address>
+        <address>
+          m. Warszawa, Aleje Jerozolimskie 21
+          <a class="contact-footer" href="mailto:info@example.com"
+            >info@example.com</a
+          >
+          <a class="contact-footer-number" href="tel:+48111111111"
+            >+48 111 111 111</a
+          >
+        </address>
+      </div>
     </footer>
   </body>
 </html>
