--- a/portfolio.html
+++ b/portfolio.html
@@ -10,24 +10,17 @@
       rel="stylesheet"
     />
     <link href="./css/styles.css" rel="stylesheet" />
-    <style>
-      body {
-        font-family: "Roboto", sans-serif;
-        color: var(--darker-text-color);
-      }
-    </style>
   </head>
   <body>
     <header>
       <nav>
         <a class="logo" href="./index.html"
-          ><span class="logo-blue">Web</span
-          ><span class="logo-black">Studio</span></a
+          >Web<span class="logo-black">Studio</span></a
         >
-        <ul>
-          <li><a class="nav-link" href="#">Agencja</a></li>
-          <li><a class="nav-link" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="nav-link" href="#">Kontakt</a></li>
+        <ul class="nav-list">
+          <li><a href="#">Agencja</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
+          <li><a href="#">Kontakt</a></li>
         </ul>
       </nav>
       <a class="header-contact" href="mailto:info@devstudio.com"
@@ -36,8 +29,8 @@
       <a class="header-contact" href="tel:+48111111111">+48 111 111 111</a>
     </header>
     <main>
-      <section class="filter">
-        <ul>
+      <div>
+        <ul class="filter-list">
           <li>
             <button class="filter-button" type="button">Wszystkie</button>
           </li>
@@ -50,9 +43,9 @@
             <button class="filter-button" type="button">Marketing</button>
           </li>
         </ul>
-      </section>
-      <section>
-        <ul class="list">
+      </div>
+      <div>
+        <ul class="images-list">
           <li>
             <figure>
               <img
@@ -180,20 +173,23 @@
             </figure>
           </li>
         </ul>
-      </section>
+      </div>
     </main>
     <footer>
-      <a href="./index.html"
-        ><span class="logo-blue">Web</span
-        ><span class="logo-white">Studio</span></a
-      >
-      <address>
-        m. Warszawa, Aleje Jerozolimskie 21
-        <a class="contact-footer" href="mailto:info@example.com"
-          >info@example.com</a
+      <div class="container-footer">
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-white">Studio</span></a
         >
-        <a class="contact-footer" href="tel:+48111111111">+48 111 111 111</a>
-      </address>
+        <address>
+          m. Warszawa, Aleje Jerozolimskie 21
+          <a class="contact-footer" href="mailto:info@example.com"
+            >info@example.com</a
+          >
+          <a class="contact-footer-number" href="tel:+48111111111"
+            >+48 111 111 111</a
+          >
+        </address>
+      </div>
     </footer>
   </body>
 </html>
