--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1 class="title">Efektywne rozwiązania dla waszego biznesu</h1>
         <button class="order-button" type="button">Zamów usługe</button>
       </div>
-      <div>
+      <section>
         <ul>
           <li>
             <article>
@@ -72,8 +72,8 @@
             </article>
           </li>
         </ul>
-      </div>
-      <div>
+      </section>
+      <section>
         <h2 class="section-title">Czym się zajmujemy</h2>
         <img
           src="./images/img1.jpg"
@@ -93,8 +93,8 @@
           width="370"
           height="294"
         />
-      </div>
-      <div>
+      </section>
+      <section>
         <h2 class="section-title">Nasz zespół</h2>
         <ul>
           <li>
@@ -154,7 +154,7 @@
             </figure>
           </li>
         </ul>
-      </div>
+      </section>
     </main>
     <footer>
       <div class="container-footer">
@@ -166,9 +166,7 @@
           <a class="contact-footer" href="mailto:info@example.com"
             >info@example.com</a
           >
-          <a class="contact-footer-number" href="tel:+48111111111"
-            >+48 111 111 111</a
-          >
+          <a class="contact-footer" href="tel:+48111111111">+48 111 111 111</a>
         </address>
       </div>
     </footer>
