--- a/portfolio.html
+++ b/portfolio.html
@@ -182,12 +182,10 @@
         >
         <address>
           m. Warszawa, Aleje Jerozolimskie 21
-          <a class="contact-footer" href="mailto:info@example.com"
+          <a class="contact-footer-underlined" href="mailto:info@example.com"
             >info@example.com</a
           >
-          <a class="contact-footer-number" href="tel:+48111111111"
-            >+48 111 111 111</a
-          >
+          <a class="contact-footer" href="tel:+48111111111">+48 111 111 111</a>
         </address>
       </div>
     </footer>
