--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -13,20 +14,22 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a class="logo" href="./index.html"
-          >Web<span class="logo-black">Studio</span></a
+      <div class="container flex-nav-container">
+        <nav class="flex-inner-nav">
+          <a class="logo" href="./index.html"
+            >Web<span class="logo-black">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li><a href="#">Agencja</a></li>
+            <li><a href="./portfolio.html">Portfolio</a></li>
+            <li><a href="#">Kontakt</a></li>
+          </ul>
+        </nav>
+        <a class="header-contact" href="mailto:info@devstudio.com"
+          >info@devstudio.com</a
         >
-        <ul class="nav-list">
-          <li><a href="#">Agencja</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="#">Kontakt</a></li>
-        </ul>
-      </nav>
-      <a class="header-contact" href="mailto:info@devstudio.com"
-        >info@devstudio.com</a
-      >
-      <a class="header-contact" href="tel:+48111111111">+48 111 111 111</a>
+        <a class="header-contact" href="tel:+48111111111">+48 111 111 111</a>
+      </div>
     </header>
     <main>
       <div>
